--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,7 @@ repositories {
     mavenCentral()
 }
 
-def restAssuredVersion = "5.3.0",
-    slf4jVersion = "2.0.7"
+def restAssuredVersion = "5.3.0"
 
 dependencies {
     testImplementation (
@@ -24,11 +23,4 @@ tasks.withType(JavaCompile) {
 
 tasks.withType(Test) {
     useJUnitPlatform()
-
-    testLogging {
-        lifecycle {
-            events "started", "skipped", "failed", "standard_error", "standard_out"
-            exceptionFormat "short"
-        }
-    }
 }
